Packages/projects/webserver/namespace.template.yaml
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "~~{KUBERNET_NAMESPACE}~~"
