Packages/projects/webserver/deployment.template.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "~~{NAME}~~"
  namespace: "~~{KUBERNET_NAMESPACE}~~"
  labels:
    app: "~~{NAME}~~"
spec:
  replicas: ~~{REPLICA_SETS}~~
  selector:
    matchLabels:
      app: "~~{NAME}~~"
  template:
    metadata:
      labels:
        app: "~~{NAME}~~"
    spec:
      dnsPolicy: "None"
      hostAliases:
      - ip: "~~{DB_SERVER_IP}~~"
        hostnames:
        - "~{app}{DB_SERVER_NAME}~"
      dnsConfig:
        nameservers:
          - "~~{DNS_SERVER}~~"
      containers:
      - name: "~{app}{APP_CONTAINER}~"
        image: "~{app}{APP_IMAGE}~"
        imagePullPolicy: "Always"
        volumeMounts: ~{}{appvolumes}~
      - name: "~{web}{WEB_CONTAINER}~"
        image: "~{web}{WEB_IMAGE}~"
        imagePullPolicy: "Always"
        volumeMounts: ~{}{webvolumes}~
      volumes: ~{}{volumes}~
